mejoras en swagger
